<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.enlaps.m.and.todo.ActivityItemEdit">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_title"
        android:id="@+id/textView"
        android:layout_marginTop="33dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etItemNewValue"
        android:hint="Item to edit"
        android:layout_alignBottom="@+id/textView"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_save"
        android:id="@+id/button2"
        android:onClick="btnSaveOnClick"
        android:layout_marginTop="43dp"
        android:layout_below="@+id/spnrPriority"
        android:layout_alignEnd="@+id/etItemNewValue" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_due_date"
        android:id="@+id/textView2"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_priority"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="33dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/etDueDate"
        android:layout_alignTop="@+id/textView2"
        android:layout_alignStart="@+id/etItemNewValue"
        android:text="@string/string_default_date" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spnrPriority"
        android:layout_alignTop="@+id/textView3"
        android:layout_alignStart="@+id/etDueDate"
        android:spinnerMode="dialog" />


</RelativeLayout>
